// Copyright Â© 2017 the InMAP authors.
// This file is part of InMAP.

// InMAP is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.

// InMAP is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License
// along with InMAP.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package eieiorpc;

service EIEIOrpc {
  rpc EndUseGroups(Selection) returns (Selectors) {}
  rpc EndUseSectors(Selection) returns (Selectors) {}
  rpc EmitterGroups(Selection) returns (Selectors) {}
  rpc EmitterSectors(Selection) returns (Selectors) {}

  rpc Years(Selection) returns (Year) {}
  rpc DefaultSelection(Selection) returns (Selection) {}
  rpc Populations(Selection) returns (Selectors) {}

  rpc MapInfo(Selection) returns (ColorInfo) {}

  rpc Geometry(GeometryInput) returns (Rectangles) {}

  rpc Concentrations(ConcentrationInput) returns (Vector) {}
  rpc ConcentrationMatrix(ConcentrationMatrixInput) returns (Matrix) {}
  rpc Emissions(EmissionsInput) returns (Vector) {}
  rpc EmissionsMatrix(EmissionsMatrixInput) returns (Matrix) {}
  rpc Health(HealthInput) returns (Vector) {}
  rpc HealthMatrix(HealthMatrixInput) returns (Matrix) {}

  rpc EvaluationHealth(EvaluationHealthInput) returns (Vector) {}
  rpc EvaluationConcentrations(EvaluationConcentrationsInput) returns (Vector) {}
  rpc ConcentrationResponseAverage(ConcentrationResponseAverageInput) returns (Vector) {}
  rpc PopulationIncidence(PopulationIncidenceInput) returns (PopulationIncidenceOutput) {}

  rpc FinalDemand(FinalDemandInput) returns (Vector) {}

  rpc EndUseMask(StringInput) returns (Mask) {}
  rpc EmitterMask(StringInput) returns (Mask) {}


  rpc EndUseGroupNames(StringInput) returns (StringList) {}
  rpc EndUseGroupAbbrevs(StringInput) returns (StringList) {}
  rpc EmitterGroupNames(StringInput) returns (StringList) {}
  rpc EmitterGroupAbbrevs(StringInput) returns (StringList) {}

  rpc Commodities(StringInput) returns (StringList) {}
  rpc Industries(StringInput) returns (StringList) {}

  rpc DemographicConsumption(DemographicConsumptionInput) returns (Vector) {}
}

message StringInput {
  string String = 1;
}

message StringList {
  repeated string List = 1;
}

message Selectors {
  repeated string Codes = 1;
  repeated string Names = 2;
  repeated float Values = 3;
}

message Selection {
	string EndUseGroup = 1;
	string EndUseSector = 2;
	string EmitterGroup = 3;
	string EmitterSector = 4;
	string ImpactType = 5;
	FinalDemandType FinalDemandType = 6;
  int32  Year = 7;
  string Population = 8;
  oneof Pol {
    Pollutant Pollutant = 9;
    Emission Emission = 10;
  }
  string AQM = 11;
}

message Year {
  repeated int32 Years = 1;
}

message Point {
  float X = 1;
  float Y = 2;
}

message Rectangle {
  Point LL = 1;
  Point LR = 2;
  Point UR = 3;
  Point UL = 4;
}

message Rectangles {
  repeated Rectangle Rectangles = 1;
}

message GeometryInput {
  string SpatialReference = 1;
  string AQM = 2;
}

message ColorInfo {
  repeated bytes RGB = 1;
  string Legend = 2;
}

enum Pollutant {
  PNH4 = 0;
  PNO3 = 1;
  PSO4 = 2;
  SOA = 3;
  PrimaryPM25 = 4;
  TotalPM25 = 5;
}

enum Emission {
  PM25 = 0;
  NH3 = 1;
  NOx = 2;
  SOx = 3;
  VOC = 4;
}

enum Location {
  Domestic = 0;
  Imported = 1;
  Total = 2;
}

enum FinalDemandType {
  // This group of demand types is directly available in the spreadsheet.
  PersonalConsumption = 0;
  PrivateStructures = 1;
  PrivateEquipment = 2;
  PrivateIP = 3;
  PrivateResidential = 4;
  InventoryChange = 5;
  Export = 6;
  DefenseConsumption = 7;
  DefenseStructures = 8;
  DefenseEquipment = 9;
  DefenseIP = 10;
  NondefenseConsumption = 11;
  NondefenseStructures = 12;
  NondefenseEquipment = 13;
  NondefenseIP = 14;
  LocalConsumption = 15;
  LocalStructures = 16;
  LocalEquipment = 17;
  LocalIP = 18;

  // This group of demand types consists of aggregates of the
  // above types.
  AllDemand = 19; // All is a combination of all categories above.
  NonExport = 20;      // NonExport is (All - Export)
}

message FinalDemandInput {
  FinalDemandType FinalDemandType = 1;
  Mask EndUseMask = 2;
  int32 Year = 3;
  Location Location = 4;
}

message DemographicConsumptionInput {
  Demograph Demograph = 1;
  Mask EndUseMask = 2;
  int32 Year = 3;
}

// These are the included demographic groups.
enum Demograph {
  Black = 0;
  Hispanic = 1;
  WhiteOther = 2;
  All = 3;
}

message ConcentrationMatrixInput {
  Vector Demand = 1;
  Pollutant Pollutant = 2;
  int32 Year = 3;
  Location Location = 4;
  string AQM = 5;
}

message ConcentrationInput {
  Vector Demand = 1;
  Mask Emitters = 2;
  Pollutant Pollutant = 3;
  int32 Year = 4;
  Location Location = 5;
  string AQM = 6;
}


message EmissionsMatrixInput {
  Vector Demand = 1;
  Emission Emission = 2;
  int32 Year = 3;
  Location Location = 4;
  string AQM = 5;
}

message EmissionsInput {
  Vector Demand = 1;
  Mask Emitters = 2;
  Emission Emission = 3;
  int32 Year = 4;
  Location Location = 5;
  string AQM = 6;
}

message HealthMatrixInput {
  Vector Demand = 1;
  Pollutant Pollutant = 2;
  string Population = 3;
  int32 Year = 4;
  Location Location = 5;
  string HR = 6;
  string AQM = 7;
}

message HealthInput {
  Vector Demand = 1;
  Mask EmitterMask = 2;
  Pollutant Pollutant = 3;
  string Population = 4;
  int32 Year = 5;
  Location Location = 6;
  string HR = 7;
  string AQM = 8;
}

message Vector {
  repeated double Data = 1;
}

message Mask {
  repeated double Data = 1;
}

message Matrix {
  int32 Rows = 1;
  int32 Cols = 2;
  repeated double Data = 3;
}

message EvaluationHealthInput {
  int32 Year = 1;
  Pollutant Pollutant = 2;
  string Population = 3;
  string HR = 4;
  string AQM = 5;
}

message EvaluationConcentrationsInput {
  int32 Year = 1;
  Pollutant Pollutant = 2;
  string AQM = 3;
}

message ConcentrationResponseAverageInput {
  int32 Year = 1;
  string Population = 2;
  string HR = 3;
  string AQM = 4;
}

message PopulationIncidenceInput {
  int32 Year = 1;
  string Population = 2;
  string HR = 3;
  string AQM = 4;
}

message PopulationIncidenceOutput {
  repeated double Population = 1;
  repeated double Incidence = 2;
}
